# docs/swagger.json
@@ -28,6 +28,15 @@
                 ],
                 "summary": "Get All Restaurants",
                 "operationId": "get-all-restaurants",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -74,6 +83,13 @@
                 "summary": "Create Restaurant",
                 "operationId": "create-restaurant",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "list info",
                         "name": "input",
@@ -129,6 +145,15 @@
                 ],
                 "summary": "Get All Reservation of Restaurants",
                 "operationId": "get-all-reservation-restaurants",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -174,6 +199,15 @@
                 ],
                 "summary": "Get All Owner Restaurants",
                 "operationId": "get-all-owner-restaurants",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -220,6 +254,13 @@
                 "summary": "Create Reservation",
                 "operationId": "create-reservation",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "list info",
                         "name": "input",
@@ -277,6 +318,13 @@
                 "operationId": "get-restaurant-by-id",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "description": "list info",
                         "name": "input",
                         "in": "body",
@@ -331,6 +379,15 @@
                 ],
                 "summary": "Get Menu of Restaurants",
                 "operationId": "get-menu-restaurants",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -375,6 +432,13 @@
                 "summary": "Add Food to Menu",
                 "operationId": "create-food-to-menu",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "list info",
                         "name": "input",
@@ -430,6 +494,15 @@
                 ],
                 "summary": "Get All Table of Restaurants",
                 "operationId": "get-all-table-restaurants",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -474,6 +547,13 @@
                 "summary": "Create Table",
                 "operationId": "create-table",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "description": "list info",
                         "name": "input",
